// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectableCard renders correctly with checkbox type 1`] = `
<DocumentFragment>
  .cache-dgvm93-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-dgvm93-Container[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-dgvm93-Container[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-lkifcq-CheckboxContainer-StyledElement {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='false'],
.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 {
  fill: #c4c9d6;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-lkifcq-CheckboxContainer-StyledElement .eqr7bqq6,
.cache-lkifcq-CheckboxContainer-StyledElement .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-lkifcq-CheckboxContainer-StyledElement .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-lkifcq-CheckboxContainer-StyledElement .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-lkifcq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-lkifcq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-lkifcq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-lkifcq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-lkifcq-CheckboxContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-lkifcq-CheckboxContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-lkifcq-CheckboxContainer-StyledElement input+svg {
  display: none;
}

.cache-lkifcq-CheckboxContainer-StyledElement label {
  display: none;
}

.cache-1tc172q-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-1tc172q-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-1tc172q-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-1tc172q-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-1tc172q-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #4f0599;
}

.cache-1tc172q-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-1tc172q-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #4f0599;
}

.cache-1tc172q-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-1tc172q-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #dd3252;
}

.cache-1tc172q-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-1tc172q-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
}

.cache-1tc172q-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1tc172q-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-1tc172q-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-1tc172q-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<div
    class="cache-dgvm93-Container e1s5n3hj1"
    data-checked="false"
    data-disabled="false"
  >
    <div
      aria-disabled="false"
      class="e1s5n3hj0 cache-lkifcq-CheckboxContainer-StyledElement eqr7bqq1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-invalid="false"
        class="cache-1tc172q-CheckboxInput eqr7bqq2"
        id="checkbox"
        name="checkbox"
        type="checkbox"
        value="choice"
      />
      <svg
        class="cache-1lcemq7-StyledIcon eqr7bqq3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-uzcbt1-InnerCheckbox eqr7bqq7"
            height="14"
            rx="2px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-1nkq693-CheckMixedMark eqr7bqq5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-1nu9t2r-CheckMark eqr7bqq6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </div>
    Checkbox card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with checkbox type and checked prop 1`] = `
<DocumentFragment>
  .cache-dgvm93-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-dgvm93-Container[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-dgvm93-Container[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-lkifcq-CheckboxContainer-StyledElement {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='false'],
.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 {
  fill: #c4c9d6;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-lkifcq-CheckboxContainer-StyledElement .eqr7bqq6,
.cache-lkifcq-CheckboxContainer-StyledElement .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-lkifcq-CheckboxContainer-StyledElement .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-lkifcq-CheckboxContainer-StyledElement .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-lkifcq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-lkifcq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-lkifcq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-lkifcq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-lkifcq-CheckboxContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-lkifcq-CheckboxContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-lkifcq-CheckboxContainer-StyledElement input+svg {
  display: none;
}

.cache-lkifcq-CheckboxContainer-StyledElement label {
  display: none;
}

.cache-1tc172q-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-1tc172q-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-1tc172q-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-1tc172q-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-1tc172q-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #4f0599;
}

.cache-1tc172q-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-1tc172q-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #4f0599;
}

.cache-1tc172q-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-1tc172q-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #dd3252;
}

.cache-1tc172q-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-1tc172q-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
}

.cache-1tc172q-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1tc172q-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-1tc172q-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-1tc172q-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<div
    class="cache-dgvm93-Container e1s5n3hj1"
    data-checked="true"
    data-disabled="false"
  >
    <div
      aria-disabled="false"
      class="e1s5n3hj0 cache-lkifcq-CheckboxContainer-StyledElement eqr7bqq1"
      data-checked="true"
      data-error="false"
    >
      <input
        aria-invalid="false"
        checked=""
        class="cache-1tc172q-CheckboxInput eqr7bqq2"
        id="radio"
        name="radio"
        type="checkbox"
        value="choice"
      />
      <svg
        class="cache-1lcemq7-StyledIcon eqr7bqq3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-uzcbt1-InnerCheckbox eqr7bqq7"
            height="14"
            rx="2px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-1nkq693-CheckMixedMark eqr7bqq5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-1nu9t2r-CheckMark eqr7bqq6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </div>
    Radio card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with checkbox type and disabled prop 1`] = `
<DocumentFragment>
  .cache-dgvm93-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-dgvm93-Container[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-dgvm93-Container[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-lkifcq-CheckboxContainer-StyledElement {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='false'],
.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 {
  fill: #c4c9d6;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-lkifcq-CheckboxContainer-StyledElement .eqr7bqq6,
.cache-lkifcq-CheckboxContainer-StyledElement .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-lkifcq-CheckboxContainer-StyledElement .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-lkifcq-CheckboxContainer-StyledElement .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-lkifcq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-lkifcq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-lkifcq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-lkifcq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-lkifcq-CheckboxContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-lkifcq-CheckboxContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-lkifcq-CheckboxContainer-StyledElement input+svg {
  display: none;
}

.cache-lkifcq-CheckboxContainer-StyledElement label {
  display: none;
}

.cache-1tc172q-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-1tc172q-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-1tc172q-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-1tc172q-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-1tc172q-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #4f0599;
}

.cache-1tc172q-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-1tc172q-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #4f0599;
}

.cache-1tc172q-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-1tc172q-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #dd3252;
}

.cache-1tc172q-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-1tc172q-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
}

.cache-1tc172q-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1tc172q-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-1tc172q-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-1tc172q-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<div
    class="cache-dgvm93-Container e1s5n3hj1"
    data-checked="false"
    data-disabled="true"
  >
    <div
      aria-disabled="true"
      class="e1s5n3hj0 cache-lkifcq-CheckboxContainer-StyledElement eqr7bqq1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-invalid="false"
        class="cache-1tc172q-CheckboxInput eqr7bqq2"
        disabled=""
        id="radio"
        name="radio"
        type="checkbox"
        value="choice"
      />
      <svg
        class="cache-1lcemq7-StyledIcon eqr7bqq3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-uzcbt1-InnerCheckbox eqr7bqq7"
            height="14"
            rx="2px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-1nkq693-CheckMixedMark eqr7bqq5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-1nu9t2r-CheckMark eqr7bqq6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </div>
    Radio card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with checkbox type and isError prop 1`] = `
<DocumentFragment>
  .cache-dgvm93-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-dgvm93-Container[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-dgvm93-Container[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-lkifcq-CheckboxContainer-StyledElement {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='false'],
.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 {
  fill: #c4c9d6;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-lkifcq-CheckboxContainer-StyledElement .eqr7bqq6,
.cache-lkifcq-CheckboxContainer-StyledElement .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-lkifcq-CheckboxContainer-StyledElement .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-lkifcq-CheckboxContainer-StyledElement .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-lkifcq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-lkifcq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-lkifcq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-lkifcq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-lkifcq-CheckboxContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-lkifcq-CheckboxContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-lkifcq-CheckboxContainer-StyledElement input+svg {
  display: none;
}

.cache-lkifcq-CheckboxContainer-StyledElement label {
  display: none;
}

.cache-1tc172q-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-1tc172q-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-1tc172q-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-1tc172q-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-1tc172q-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #4f0599;
}

.cache-1tc172q-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-1tc172q-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #4f0599;
}

.cache-1tc172q-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-1tc172q-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #dd3252;
}

.cache-1tc172q-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-1tc172q-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
}

.cache-1tc172q-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1tc172q-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-1tc172q-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-1tc172q-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

.cache-1l9l4mf-StyledText-PaddedText {
  color: #a6102d;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0 4px;
}

<div
    class="cache-dgvm93-Container e1s5n3hj1"
    data-checked="false"
    data-disabled="false"
    data-error="true"
  >
    <div
      aria-disabled="false"
      class="e1s5n3hj0 cache-lkifcq-CheckboxContainer-StyledElement eqr7bqq1"
      data-checked="false"
      data-error="true"
    >
      <input
        aria-describedby="radio-hint"
        aria-invalid="true"
        class="cache-1tc172q-CheckboxInput eqr7bqq2"
        id="radio"
        name="radio"
        type="checkbox"
        value="choice"
      />
      <svg
        class="cache-1lcemq7-StyledIcon eqr7bqq3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-uzcbt1-InnerCheckbox eqr7bqq7"
            height="14"
            rx="2px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-1nkq693-CheckMixedMark eqr7bqq5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-1nu9t2r-CheckMark eqr7bqq6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </div>
    <p
      class="eqr7bqq4 cache-1l9l4mf-StyledText-PaddedText e13y3mga0"
    />
    Radio card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with checkbox type and tooltip prop 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-dgvm93-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-dgvm93-Container[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-dgvm93-Container[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-lkifcq-CheckboxContainer-StyledElement {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='false'],
.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 {
  fill: #c4c9d6;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-lkifcq-CheckboxContainer-StyledElement .eqr7bqq6,
.cache-lkifcq-CheckboxContainer-StyledElement .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-lkifcq-CheckboxContainer-StyledElement .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-lkifcq-CheckboxContainer-StyledElement .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-lkifcq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-lkifcq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-lkifcq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-lkifcq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-lkifcq-CheckboxContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-lkifcq-CheckboxContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-lkifcq-CheckboxContainer-StyledElement input+svg {
  display: none;
}

.cache-lkifcq-CheckboxContainer-StyledElement label {
  display: none;
}

.cache-1tc172q-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-1tc172q-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-1tc172q-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-1tc172q-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-1tc172q-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #4f0599;
}

.cache-1tc172q-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-1tc172q-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #4f0599;
}

.cache-1tc172q-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-1tc172q-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #dd3252;
}

.cache-1tc172q-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-1tc172q-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
}

.cache-1tc172q-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1tc172q-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-1tc172q-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-1tc172q-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<div
    aria-describedby=":rn:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <div
      class="cache-dgvm93-Container e1s5n3hj1"
      data-checked="false"
      data-disabled="false"
    >
      <div
        aria-disabled="false"
        class="e1s5n3hj0 cache-lkifcq-CheckboxContainer-StyledElement eqr7bqq1"
        data-checked="false"
        data-error="false"
      >
        <input
          aria-invalid="false"
          class="cache-1tc172q-CheckboxInput eqr7bqq2"
          id="checkbox"
          name="checkbox"
          type="checkbox"
          value="choice"
        />
        <svg
          class="cache-1lcemq7-StyledIcon eqr7bqq3"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <rect
              class="cache-uzcbt1-InnerCheckbox eqr7bqq7"
              height="14"
              rx="2px"
              stroke-width="2"
              width="14"
              x="5"
              y="5"
            />
            <rect
              class="cache-1nkq693-CheckMixedMark eqr7bqq5"
              height="2"
              rx="1"
              width="8"
              x="8"
              y="11"
            />
            <rect
              class="cache-1nu9t2r-CheckMark eqr7bqq6"
              height="8"
              rx="1"
              width="8"
              x="8"
              y="8"
            />
          </g>
        </svg>
      </div>
      Checkbox card
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with complex children 1`] = `
<DocumentFragment>
  .cache-dgvm93-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-dgvm93-Container[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-dgvm93-Container[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-lkifcq-CheckboxContainer-StyledElement {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='false'],
.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 {
  fill: #c4c9d6;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-lkifcq-CheckboxContainer-StyledElement .eqr7bqq6,
.cache-lkifcq-CheckboxContainer-StyledElement .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-lkifcq-CheckboxContainer-StyledElement .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-lkifcq-CheckboxContainer-StyledElement .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-lkifcq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-lkifcq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-lkifcq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-lkifcq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-lkifcq-CheckboxContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-lkifcq-CheckboxContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-lkifcq-CheckboxContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-lkifcq-CheckboxContainer-StyledElement input+svg {
  display: none;
}

.cache-lkifcq-CheckboxContainer-StyledElement label {
  display: none;
}

.cache-1tc172q-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-1tc172q-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-1tc172q-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-1tc172q-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-1tc172q-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #4f0599;
}

.cache-1tc172q-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-1tc172q-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #4f0599;
}

.cache-1tc172q-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-1tc172q-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #dd3252;
}

.cache-1tc172q-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-1tc172q-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
}

.cache-1tc172q-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1tc172q-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-1tc172q-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-1tc172q-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<div
    class="cache-dgvm93-Container e1s5n3hj1"
    data-checked="false"
    data-disabled="true"
  >
    <div
      aria-disabled="true"
      class="e1s5n3hj0 cache-lkifcq-CheckboxContainer-StyledElement eqr7bqq1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-invalid="false"
        class="cache-1tc172q-CheckboxInput eqr7bqq2"
        disabled=""
        id="radio"
        name="radio"
        type="checkbox"
        value="choice"
      />
      <svg
        class="cache-1lcemq7-StyledIcon eqr7bqq3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-uzcbt1-InnerCheckbox eqr7bqq7"
            height="14"
            rx="2px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-1nkq693-CheckMixedMark eqr7bqq5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-1nu9t2r-CheckMark eqr7bqq6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </div>
    <div
      style="background: gray; color: gray;"
    >
      Complex radio card
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with default props 1`] = `
<DocumentFragment>
  .cache-dgvm93-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-dgvm93-Container[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-dgvm93-Container[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-17m89bi-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='false'],
.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-17m89bi-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-17m89bi-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #eeeeff;
}

.cache-17m89bi-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-17m89bi-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffe1e7;
}

.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 {
  fill: #c4c9d6;
}

.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f6f6f8;
}

.cache-17m89bi-RadioContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-17m89bi-RadioContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-17m89bi-RadioContainer-StyledElement input+svg {
  display: none;
}

.cache-17m89bi-RadioContainer-StyledElement label {
  display: none;
}

.cache-1a1gw3x-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1a1gw3x-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1a1gw3x-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1a1gw3x-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #4f0599;
}

.cache-1a1gw3x-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #a6102d;
}

.cache-1a1gw3x-RadioInput:focus+.ehkrmld2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1a1gw3x-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #eeeeff;
}

.cache-1a1gw3x-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1a1gw3x-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffe1e7;
}

.cache-w8xgd7-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-w8xgd7-StyledIcon .ehkrmld4 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

<div
    class="cache-dgvm93-Container e1s5n3hj1"
    data-checked="false"
    data-disabled="false"
  >
    <div
      aria-disabled="false"
      class="e1s5n3hj0 cache-17m89bi-RadioContainer-StyledElement ehkrmld0"
      data-checked="false"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="cache-1a1gw3x-RadioInput ehkrmld1"
        id="radio-choice"
        name="radio"
        type="radio"
        value="choice"
      />
      <svg
        class="cache-w8xgd7-StyledIcon ehkrmld2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-p50c5x-InnerCircleRing ehkrmld4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-ivayk3-RadioMark ehkrmld3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
    </div>
    Radio card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with radio type and checked prop 1`] = `
<DocumentFragment>
  .cache-dgvm93-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-dgvm93-Container[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-dgvm93-Container[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-17m89bi-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='false'],
.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-17m89bi-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-17m89bi-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #eeeeff;
}

.cache-17m89bi-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-17m89bi-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffe1e7;
}

.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 {
  fill: #c4c9d6;
}

.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f6f6f8;
}

.cache-17m89bi-RadioContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-17m89bi-RadioContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-17m89bi-RadioContainer-StyledElement input+svg {
  display: none;
}

.cache-17m89bi-RadioContainer-StyledElement label {
  display: none;
}

.cache-1a1gw3x-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1a1gw3x-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1a1gw3x-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1a1gw3x-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #4f0599;
}

.cache-1a1gw3x-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #a6102d;
}

.cache-1a1gw3x-RadioInput:focus+.ehkrmld2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1a1gw3x-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #eeeeff;
}

.cache-1a1gw3x-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1a1gw3x-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffe1e7;
}

.cache-w8xgd7-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-w8xgd7-StyledIcon .ehkrmld4 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

<div
    class="cache-dgvm93-Container e1s5n3hj1"
    data-checked="true"
    data-disabled="false"
  >
    <div
      aria-disabled="false"
      class="e1s5n3hj0 cache-17m89bi-RadioContainer-StyledElement ehkrmld0"
      data-checked="true"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        checked=""
        class="cache-1a1gw3x-RadioInput ehkrmld1"
        id="radio-choice"
        name="radio"
        type="radio"
        value="choice"
      />
      <svg
        class="cache-w8xgd7-StyledIcon ehkrmld2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-p50c5x-InnerCircleRing ehkrmld4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-ivayk3-RadioMark ehkrmld3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
    </div>
    Radio card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with radio type and disabled prop 1`] = `
<DocumentFragment>
  .cache-dgvm93-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-dgvm93-Container[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-dgvm93-Container[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-17m89bi-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='false'],
.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-17m89bi-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-17m89bi-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #eeeeff;
}

.cache-17m89bi-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-17m89bi-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffe1e7;
}

.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 {
  fill: #c4c9d6;
}

.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f6f6f8;
}

.cache-17m89bi-RadioContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-17m89bi-RadioContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-17m89bi-RadioContainer-StyledElement input+svg {
  display: none;
}

.cache-17m89bi-RadioContainer-StyledElement label {
  display: none;
}

.cache-1a1gw3x-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1a1gw3x-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1a1gw3x-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1a1gw3x-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #4f0599;
}

.cache-1a1gw3x-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #a6102d;
}

.cache-1a1gw3x-RadioInput:focus+.ehkrmld2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1a1gw3x-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #eeeeff;
}

.cache-1a1gw3x-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1a1gw3x-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffe1e7;
}

.cache-w8xgd7-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-w8xgd7-StyledIcon .ehkrmld4 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

<div
    class="cache-dgvm93-Container e1s5n3hj1"
    data-checked="false"
    data-disabled="true"
  >
    <div
      aria-disabled="true"
      class="e1s5n3hj0 cache-17m89bi-RadioContainer-StyledElement ehkrmld0"
      data-checked="false"
    >
      <input
        aria-disabled="true"
        aria-invalid="false"
        class="cache-1a1gw3x-RadioInput ehkrmld1"
        disabled=""
        id="radio-choice"
        name="radio"
        type="radio"
        value="choice"
      />
      <svg
        class="cache-w8xgd7-StyledIcon ehkrmld2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-p50c5x-InnerCircleRing ehkrmld4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-ivayk3-RadioMark ehkrmld3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
    </div>
    Radio card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with radio type and isError prop 1`] = `
<DocumentFragment>
  .cache-dgvm93-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-dgvm93-Container[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-dgvm93-Container[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-17m89bi-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='false'],
.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-17m89bi-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-17m89bi-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #eeeeff;
}

.cache-17m89bi-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-17m89bi-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffe1e7;
}

.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 {
  fill: #c4c9d6;
}

.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f6f6f8;
}

.cache-17m89bi-RadioContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-17m89bi-RadioContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-17m89bi-RadioContainer-StyledElement input+svg {
  display: none;
}

.cache-17m89bi-RadioContainer-StyledElement label {
  display: none;
}

.cache-1a1gw3x-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1a1gw3x-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1a1gw3x-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1a1gw3x-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #4f0599;
}

.cache-1a1gw3x-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #a6102d;
}

.cache-1a1gw3x-RadioInput:focus+.ehkrmld2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1a1gw3x-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #eeeeff;
}

.cache-1a1gw3x-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1a1gw3x-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffe1e7;
}

.cache-w8xgd7-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-w8xgd7-StyledIcon .ehkrmld4 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

<div
    class="cache-dgvm93-Container e1s5n3hj1"
    data-checked="false"
    data-disabled="false"
    data-error="true"
  >
    <div
      aria-disabled="false"
      class="e1s5n3hj0 cache-17m89bi-RadioContainer-StyledElement ehkrmld0"
      data-checked="false"
      data-error="true"
    >
      <input
        aria-disabled="false"
        aria-invalid="true"
        class="cache-1a1gw3x-RadioInput ehkrmld1"
        id="radio-choice"
        name="radio"
        type="radio"
        value="choice"
      />
      <svg
        class="cache-w8xgd7-StyledIcon ehkrmld2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-p50c5x-InnerCircleRing ehkrmld4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-ivayk3-RadioMark ehkrmld3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
    </div>
    Radio card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with radio type and tooltip prop 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-dgvm93-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-dgvm93-Container[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-dgvm93-Container[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-17m89bi-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='false'],
.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-17m89bi-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-17m89bi-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #eeeeff;
}

.cache-17m89bi-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-17m89bi-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffe1e7;
}

.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 {
  fill: #c4c9d6;
}

.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f6f6f8;
}

.cache-17m89bi-RadioContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-17m89bi-RadioContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-17m89bi-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-17m89bi-RadioContainer-StyledElement input+svg {
  display: none;
}

.cache-17m89bi-RadioContainer-StyledElement label {
  display: none;
}

.cache-1a1gw3x-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1a1gw3x-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1a1gw3x-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1a1gw3x-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #4f0599;
}

.cache-1a1gw3x-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #a6102d;
}

.cache-1a1gw3x-RadioInput:focus+.ehkrmld2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1a1gw3x-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #eeeeff;
}

.cache-1a1gw3x-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1a1gw3x-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffe1e7;
}

.cache-w8xgd7-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-w8xgd7-StyledIcon .ehkrmld4 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

<div
    aria-describedby=":rl:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <div
      class="cache-dgvm93-Container e1s5n3hj1"
      data-checked="false"
      data-disabled="false"
    >
      <div
        aria-disabled="false"
        class="e1s5n3hj0 cache-17m89bi-RadioContainer-StyledElement ehkrmld0"
        data-checked="false"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="cache-1a1gw3x-RadioInput ehkrmld1"
          id="radio-choice"
          name="radio"
          type="radio"
          value="choice"
        />
        <svg
          class="cache-w8xgd7-StyledIcon ehkrmld2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-p50c5x-InnerCircleRing ehkrmld4"
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              class="cache-ivayk3-RadioMark ehkrmld3"
              cx="12"
              cy="12"
              r="4"
            />
          </g>
        </svg>
      </div>
      Radio card
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with showTick and type checkbox 1`] = `
<DocumentFragment>
  .cache-dgvm93-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-dgvm93-Container[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-dgvm93-Container[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-dv5vpl-CheckboxContainer-StyledElement {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-dv5vpl-CheckboxContainer-StyledElement[aria-disabled='false'],
.cache-dv5vpl-CheckboxContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-dv5vpl-CheckboxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-dv5vpl-CheckboxContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-dv5vpl-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 {
  fill: #c4c9d6;
}

.cache-dv5vpl-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-dv5vpl-CheckboxContainer-StyledElement .eqr7bqq6,
.cache-dv5vpl-CheckboxContainer-StyledElement .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-dv5vpl-CheckboxContainer-StyledElement .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-dv5vpl-CheckboxContainer-StyledElement .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-dv5vpl-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-dv5vpl-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-dv5vpl-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-dv5vpl-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-dv5vpl-CheckboxContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-dv5vpl-CheckboxContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-dv5vpl-CheckboxContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-1tc172q-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-1tc172q-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-1tc172q-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-1tc172q-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-1tc172q-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #4f0599;
}

.cache-1tc172q-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-1tc172q-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #4f0599;
}

.cache-1tc172q-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-1tc172q-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #dd3252;
}

.cache-1tc172q-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-1tc172q-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
}

.cache-1tc172q-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1tc172q-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-1tc172q-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-1tc172q-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<div
    class="cache-dgvm93-Container e1s5n3hj1"
    data-checked="false"
    data-disabled="false"
  >
    <div
      aria-disabled="false"
      class="e1s5n3hj0 cache-dv5vpl-CheckboxContainer-StyledElement eqr7bqq1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-invalid="false"
        class="cache-1tc172q-CheckboxInput eqr7bqq2"
        id="checkbox"
        name="checkbox"
        type="checkbox"
        value="choice"
      />
      <svg
        class="cache-1lcemq7-StyledIcon eqr7bqq3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-uzcbt1-InnerCheckbox eqr7bqq7"
            height="14"
            rx="2px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-1nkq693-CheckMixedMark eqr7bqq5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-1nu9t2r-CheckMark eqr7bqq6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </div>
    Checkbox card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with showTick and type radio 1`] = `
<DocumentFragment>
  .cache-dgvm93-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-dgvm93-Container[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-dgvm93-Container[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-1wb3vtq-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1wb3vtq-RadioContainer-StyledElement[aria-disabled='false'],
.cache-1wb3vtq-RadioContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1wb3vtq-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1wb3vtq-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #eeeeff;
}

.cache-1wb3vtq-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1wb3vtq-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffe1e7;
}

.cache-1wb3vtq-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1wb3vtq-RadioContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1wb3vtq-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 {
  fill: #c4c9d6;
}

.cache-1wb3vtq-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f6f6f8;
}

.cache-1wb3vtq-RadioContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-1wb3vtq-RadioContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-1wb3vtq-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-1a1gw3x-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1a1gw3x-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1a1gw3x-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1a1gw3x-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #4f0599;
}

.cache-1a1gw3x-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #a6102d;
}

.cache-1a1gw3x-RadioInput:focus+.ehkrmld2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1a1gw3x-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #eeeeff;
}

.cache-1a1gw3x-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1a1gw3x-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffe1e7;
}

.cache-w8xgd7-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-w8xgd7-StyledIcon .ehkrmld4 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

<div
    class="cache-dgvm93-Container e1s5n3hj1"
    data-checked="false"
    data-disabled="false"
  >
    <div
      aria-disabled="false"
      class="e1s5n3hj0 cache-1wb3vtq-RadioContainer-StyledElement ehkrmld0"
      data-checked="false"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="cache-1a1gw3x-RadioInput ehkrmld1"
        id="checkbox-choice"
        name="checkbox"
        type="radio"
        value="choice"
      />
      <svg
        class="cache-w8xgd7-StyledIcon ehkrmld2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-p50c5x-InnerCircleRing ehkrmld4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-ivayk3-RadioMark ehkrmld3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
    </div>
    Checkbox card
  </div>
</DocumentFragment>
`;
